crates/cargo-manifest/tests/snapshots/autotarget__full_example_with_declarations_2024.snap
---
source: tests/autotarget.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "test-package",
            edition: Some(
                Local(
                    E2024,
                ),
            ),
            version: Some(
                Local(
                    "0.1.0",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [
        Product {
            path: Some(
                "src/bin/named-executable.rs",
            ),
            name: Some(
                "named-executable",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
        Product {
            path: Some(
                "src/bin/another-executable.rs",
            ),
            name: Some(
                "another-executable",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
        Product {
            path: Some(
                "src/bin/multi-file-executable/main.rs",
            ),
            name: Some(
                "multi-file-executable",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
        Product {
            path: Some(
                "src/main.rs",
            ),
            name: Some(
                "test-package",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
    ],
    bench: [
        Product {
            path: Some(
                "benches/large-input.rs",
            ),
            name: Some(
                "large-input",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
        Product {
            path: Some(
                "benches/multi-file-bench/main.rs",
            ),
            name: Some(
                "multi-file-bench",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
    ],
    test: [
        Product {
            path: Some(
                "tests/some-integration-tests.rs",
            ),
            name: Some(
                "some-integration-tests",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
        Product {
            path: Some(
                "tests/multi-file-test/main.rs",
            ),
            name: Some(
                "multi-file-test",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: None,
        },
    ],
    example: [
        Product {
            path: Some(
                "examples/simple.rs",
            ),
            name: Some(
                "simple",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
        Product {
            path: Some(
                "examples/multi-file-example/main.rs",
            ),
            name: Some(
                "multi-file-example",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    patch: None,
    lib: Some(
        Product {
            path: Some(
                "src/lib.rs",
            ),
            name: Some(
                "test_package",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2024,
            ),
            required_features: [],
            crate_type: Some(
                [
                    "lib",
                ],
            ),
        },
    ),
    profile: None,
    badges: None,
}
